добавила стилевые файлы

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,20 @@
-// Начните писать стили здесь
+@import "../less/global/fonts.less";
+@import "../less/global/global.less";
+@import "../less/global/variables.less";
+@import "../less/blocks/advantages.less";
+@import "../less/blocks/button.less";
+@import "../less/blocks/contacts.less";
+@import "../less/blocks/form.less";
+@import "../less/blocks/main-footer.less";
+@import "../less/blocks/main-header.less";
+@import "../less/blocks/main.less";
+@import "../less/blocks/page.less";
+@import "../less/blocks/page-title.less";
+@import "../less/blocks/popular-product.less";
+@import "../less/blocks/product-cards.less";
+@import "../less/blocks/product-process.less";
+@import "../less/blocks/reviews.less";
+@import "../less/blocks/site-list.less";
+@import "../less/blocks/social.less";
+@import "../less/blocks/title.less";
+@import "../less/blocks/user-list.less";
