--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -31,3 +31,19 @@
   line-height: 16px;
   color: @dark-gray;
 }
+
+.form__fieldset {
+  display: flex;
+  border: none;
+}
+
+@media (min-width: @tablet-width) {
+  .form__title {
+    padding-right: 95px;
+  }
+
+  .form__buttons {
+    display: flex;
+    justify-content: space-between;
+  }
+}
