--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -1,3 +1,30 @@
 .main-footer {
   background-color: @light-gray;
 }
+
+.main-footer__wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (max-width: @mobile-width-only) {
+    .main-footer__logo {
+    display: none;
+  }
+}
+
+@media (min-width: @tablet-width) {
+ .main-footer__wrapper {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 668px;
+    margin: 0 auto;
+  }
+
+}
+
+@media (min-width: @desktop-width) {
+  .main-footer__wrapper {
+    width: 1050px;
+  }
+}
