--- a/source/less/blocks/product-process.less
+++ b/source/less/blocks/product-process.less
@@ -10,3 +10,11 @@
   line-height: 30px;
   color: @dark-gray;
 }
+
+@media (min-width: @tablet-width) {
+  .product-process__title {
+    font-size: 20px;
+  }
+}
+
+
