--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,9 +4,11 @@
 @import "../less/blocks/advantages.less";
 @import "../less/blocks/button.less";
 @import "../less/blocks/contacts.less";
+@import "../less/blocks/container.less";
 @import "../less/blocks/form.less";
 @import "../less/blocks/main-footer.less";
 @import "../less/blocks/main-header.less";
+@import "../less/blocks/main-nav.less";
 @import "../less/blocks/main.less";
 @import "../less/blocks/page.less";
 @import "../less/blocks/page-title.less";
@@ -18,3 +20,4 @@
 @import "../less/blocks/social.less";
 @import "../less/blocks/title.less";
 @import "../less/blocks/user-list.less";
+@import "../less/blocks/user-sale.less";
