--- a/source/less/blocks/page-title.less
+++ b/source/less/blocks/page-title.less
@@ -7,3 +7,18 @@
   font-size: 27px;
   line-height: 30px;
 }
+
+@media (min-width: @tablet-width) {
+  .page-title__text {
+    text-align: center;
+    font-size: 43px;
+    line-height: 50px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-title__text {
+    font-size: 53px;
+    line-height: 57px;
+  }
+}
