--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -1,5 +1,6 @@
 .page {
   height: 100%;
+  min-width: 320px;
   font-size: 15px;
   font-family: "Open Sans", "Arial", sans-serif;
   line-height: 30px;
