--- a/source/less/blocks/product-cards.less
+++ b/source/less/blocks/product-cards.less
@@ -1,4 +1,6 @@
 .product-cards__list {
+  display: flex;
+  flex-direction: column;
   list-style-type: none;
 }
 
@@ -19,4 +21,35 @@
   font-weight: 700;
   font-size: 15px;
   line-height: 24px;
+}
+
+.product-cards__wrapper {
+  display: flex;
+}
+
+
+@media (min-width: @tablet-width) {
+  .main-catalog-container {
+    margin: 0 auto;
+  }
+
+  .product-cards__title {
+    font-size: 20px;
+  }
+
+  .product-cards__price {
+    font-size: 17px;
+  }
+
+  .product-cards__description {
+    font-size: 15px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .product-cards__list {
+    display: grid;
+    grid-template-columns: repeat(3, 316px);
+    gap: 52px;
+  }
 }
