--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   list-style-type: none;
+  padding: 0;
 }
 
 .site-list__item {
@@ -13,4 +14,35 @@
 .site-list__item a {
   text-decoration: none;
   color: @black;
+}
+
+@media (max-width: @mobile-width-only) {
+
+}
+
+@media (min-width: @tablet-width) {
+  .site-list {
+    flex-direction: row;
+    margin: 0;
+    padding: 0;
+  }
+
+  .site-list__item a {
+    display: block;
+    min-width: 167px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .site-list {
+    order: 0;
+  }
+
+  .site-list__item a {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    padding-right: 41px;
+
+  }
 }
