--- a/source/less/blocks/title.less
+++ b/source/less/blocks/title.less
@@ -6,3 +6,17 @@
   font-size: 25px;
   line-height: 30px;
 }
+
+@media (min-width: @tablet-width) {
+  .title {
+    font-size: 43px;
+    line-height: 50px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .title {
+    font-size: 53px;
+    line-height: 57px;
+  }
+}
