--- a/source/less/blocks/user-list.less
+++ b/source/less/blocks/user-list.less
@@ -1,4 +1,8 @@
-.user-list {
+.user-list__container {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
   list-style-type: none;
 }
 
@@ -9,6 +13,43 @@
 }
 
 .user-list__item a {
+  display: block;
   text-decoration: none;
   color: @black;
+}
+
+@media (max-width: @mobile-width-only) {
+
+
+}
+
+@media (min-width: @tablet-width) {
+  .user-list__container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+  }
+
+  .user-list__item:first-child {
+    width: 82px;
+    box-sizing: border-box;
+  }
+
+  .user-list__item {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    padding-left: 32px;
+    border-left: 1px solid rgba(0,0,0,0.2);
+  }
+
+  .user-list__text {
+    display: none;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .user-list {
+    order: 3;
+  }
 }
