--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -4,8 +4,9 @@
 @turquoise: #56c3b2;
 @dark-gray: #444444;
 @light-gray: #f1f1f1;
+@gray: #ececec;
 
 
 @tablet-width: 768px;
-@desktop-width: 1200px;
+@desktop-width: 1150px;
 @mobile-width-only: 767px;
