--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,5 +1,10 @@
 .advantages {
-  padding-bottom: 58px;
+  padding-bottom: 26px;
+  padding-right: 30px;
+}
+
+.advantages__title {
+  padding-bottom: 28px;
 }
 
 .advantages__list {
@@ -9,10 +14,24 @@
 }
 
 .advantages__item {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding-bottom: 32px;
   font-weight: 700;
   font-size: 17px;
   line-height: 20px;
   color: @black;
+}
+
+.advantages__icon {
+  padding-bottom: 20px;
+}
+
+@media (max-width: @mobile-width-only) {
+  .advantages {
+    padding-left: 30px;
+  }
 }
 
 @media (min-width: @tablet-width) {
@@ -48,7 +67,5 @@
 }
 
 @media (min-width: @desktop-width) {
-  .advantages {
-    margin-left: 175px;
-  }
+
 }
