--- a/source/less/blocks/product-process.less
+++ b/source/less/blocks/product-process.less
@@ -1,3 +1,14 @@
+.product-process {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.product-process__wrapper {
+  border: 1px solid @light-gray;
+}
+
 .product-process__title {
   font-weight: 700;
   font-size: 17px;
