--- a/source/less/style.less
+++ b/source/less/style.less
@@ -10,6 +10,7 @@
 @import "../less/blocks/main-header.less";
 @import "../less/blocks/main-nav.less";
 @import "../less/blocks/main.less";
+@import "../less/blocks/map.less";
 @import "../less/blocks/page.less";
 @import "../less/blocks/page-title.less";
 @import "../less/blocks/popular-product.less";
