--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,8 +1,28 @@
 .button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 16px;
+  padding-bottom: 16px;
   font-weight: 700;
   font-size: 18px;
   line-height: 20px;
   text-decoration: none;
   text-transform: uppercase;
+  outline: 2px solid @dark-gray;
+  border: none;
+  background: inherit;
   color: @dark-gray;
+}
+
+@media (max-width: @mobile-width-only) {
+  .button {
+    width: 260px;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .button {
+    width: 230px;
+  }
 }
