--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,3 +1,4 @@
+
 .form__description {
   font-size: 13px;
   line-height: 24px;
@@ -5,11 +6,44 @@
 }
 
 .form__title {
+  position: relative;
   font-weight: 700;
   font-size: 17px;
   line-height: 16px;
   text-transform: uppercase;
   color: @turquoise-light;
+}
+
+
+.form__type-label {
+  position: relative;
+}
+
+.form__type-control {
+  position: absolute;
+  content: "";
+  top: -9px;
+  left: 0;
+  width: 42px;
+  height: 42px;
+  border: 2px solid @dark-gray;
+  border-radius: 50%;
+}
+
+.form__type-control-label {
+  display: block;
+  padding-left: 60px;
+}
+
+.form__type-input:checked + .form__type-control::before {
+  position: absolute;
+  content: "";
+  top: 12px;
+  left: 12px;
+  width: 18px;
+  height: 18px;
+  background-color: #62d1ba;
+  border-radius: 50%;
 }
 
 .form__parametr {
@@ -19,9 +53,17 @@
   color: @black;
 }
 
+.form__parametr-color {
+  position: relative;
+  padding-left: 60px;
+}
+
 .form__list {
   margin: 0;
   padding: 0;
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 18px;
   list-style-type: none;
 }
 
@@ -34,16 +76,280 @@
 
 .form__fieldset {
   display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
   border: none;
+}
+
+.form__type-item {
+  padding-bottom: 24px;
+}
+
+.form__color-item {
+  padding-top: 10px;
+  padding-bottom: 40px;
+}
+
+.form__color-control {
+  position: absolute;
+  content: "";
+  border: 2px solid @dark-gray;
+}
+
+.form__color-input:checked + .form__color-control {
+  position: absolute;
+  content: "";
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.form__name-item {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 21px;
+}
+
+.form__user-input {
+  height: 52px;
+  font-family: "Open Sans";
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 18px;
+  border: none;
+  border-bottom: 2px solid @dark-gray;
+}
+
+.form__user-input::placeholder {
+  opacity: 0.3;
+}
+
+.form__info-text {
+  width: 100%;
+  height: 142px;
+  padding: 17px;
+  font-family: "Open Sans";
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 18px;
+  border: 2px solid @dark-gray;
+  box-sizing: border-box;
+}
+
+.form__info-text::placeholder {
+  opacity: 0.3;
+}
+
+.form__text {
+  margin-top: 17px;
+  margin-bottom: 30px;
+}
+
+.form__button {
+  margin-bottom: 55px;
+}
+
+@media (max-width: @mobile-width-only) {
+  .form__fieldset {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .form__buttons {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .form__color-control {
+    top: -8px;
+    left: 0;
+    width: 38px;
+    height: 38px;
+  }
+
+  .form__color-input:checked + .form__color-control {
+    width: 38px;
+    height: 38px;
+    background-image: url(../../img/icon-input-mobile.svg);
+  }
+
+  .form__title::after {
+    position: absolute;
+    content: "";
+    width: 200px;
+    height: 1px;
+    top: 8px;
+    right: 0;
+    background-color: #62d1ba;
+  }
+
+  .form__title--email::after {
+    width: 182px;
+  }
+
+  .form__user-input {
+    width: 100%;
+  }
 }
 
 @media (min-width: @tablet-width) {
   .form__title {
-    padding-right: 95px;
+    margin: 0;
+    padding-right: 105px;
+  }
+
+  .form__description {
+    padding-bottom: 60px;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 30px;
   }
 
   .form__buttons {
     display: flex;
     justify-content: space-between;
+  }
+
+  .form__list {
+    font-size: 19px;
+    line-height: 18px;
+  }
+
+  .form__type-item {
+    padding-bottom: 50px;
+  }
+
+  .form__color {
+    padding-top: 50px;
+    padding-bottom: 10px;
+    background-color: @light-gray;
+  }
+
+  .form__color-item {
+    padding-bottom: 45px;
+  }
+
+  .form__parametr-color {
+    padding-left: 80px;
+  }
+
+  .form__color-control {
+    top: -12px;
+    left: 0;
+    width: 52px;
+    height: 52px;
+  }
+
+  .form__color-input:checked + .form__color-control {
+    width: 52px;
+    height: 52px;
+    background-image: url(../../img/icon-input-tablet.svg);
+  }
+
+  .form__list--color {
+    display: grid;
+    grid-template-columns: 250px 250px;
+  }
+
+  .form__container {
+    display: flex;
+    flex-direction: row;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
+  .form__name {
+    padding-top: 60px;
+  }
+
+  .form__name-item {
+    width: 500px;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .form__parametr--name {
+    padding-right: 25px;
+  }
+
+  .form__user-input {
+    width: 100%;
+  }
+
+  .form__phone {
+    padding-top: 50px;
+    padding-bottom: 10px;
+    background-color: @light-gray;
+  }
+
+  .form__user-input--color {
+    background-color: @light-gray;
+  }
+
+  .form__email {
+    padding-bottom: 50px;
+    background-color: @light-gray;
+  }
+
+  .form__title--email {
+    min-width: 90px;
+    padding-right: 50px;
+  }
+
+  .form__info {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+
+  .form__buttons {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
+  .form__text {
+    order: 2;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form__title {
+    padding-right: 85px;
+  }
+
+  .form__description {
+    padding-right: 225px;
+  }
+
+  .form__container {
+    padding-left: 100px;
+  }
+
+  .form__list--color {
+    grid-template-columns: 250px 250px 250px;
+  }
+
+  .form__name-item {
+    width: 680px;
+  }
+
+  .form__phone {
+    padding-right: 175px;
+  }
+
+  .form__email {
+    padding-right: 175px;
+  }
+
+  .form__info {
+    padding-right: 175px;
+  }
+
+  .form__buttons {
+    padding-left: 225px;
+    padding-right: 175px;
+  }
+
+  .form__title--email {
+    padding-right: 25px;
   }
 }
