--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,10 +1,131 @@
+.main-nav__wrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: auto;
+}
 
+.main-nav__logo-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+.main-nav__toggle {
+  position: absolute;
+  top: -70px;
+  right: 0;
+  z-index: 2;
+  display: block;
+  width: 70px;
+  height: 50px;
+  background-color: inherit;
+  cursor: pointer;
+  border: none;
+}
+
+.main-nav--closed .main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 90px;
+  left: 0;
+  width: 21px;
+  height: 2px;
+  background-color: @black;
+  box-shadow: 0 8px 0 0 @black, 0 16px 0 0 @black;
+}
+
+.main-nav--opened {
+  display: flex;
+  flex-direction: column;
+}
+
+.main-nav--opened .main-nav__toggle {
+  top: 0;
+  right: 0;
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 24px;
+    left: 18px;
+    width: 20px;
+    height: 2px;
+    background-color: @black;
+  }
+
+  &::before {
+    transform: rotate(45deg);
+    box-shadow: none;
+  }
+
+  &::after {
+    transform: rotate(-45deg);
+  }
+}
+
+@media (max-width: @mobile-width-only) {
+  .main-nav__logo {
+    height: 59px;
+    padding-top: 22px;
+    text-align: center;
+  }
+
+  .main-nav--closed .site-list__item {
+    display: none;
+  }
+
+  .main-nav--closed .user-list__item {
+    display: none;
+  }
+
+  .main-nav--nojs .main-nav__toggle {
+    display: none;
+  }
+
+  .main-nav--nojs .main-nav__wrapper {
+    position: static;
+    min-height: 0;
+  }
+
+  .main-nav--nojs .site-list__item {
+    display: block;
+  }
+
+  .main-nav--nojs .user-list__item {
+    display: block;
+  }
+
+}
 
 @media (min-width: @tablet-width) {
-  .main-nav {
+  .main-nav__wrapper {
+    justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: wrap;
+    z-index: 2;
+  }
+
+  .main-nav__logo-container {
     order: 1;
   }
+
+  .main-nav__logo {
+    padding-top: 22px;
+  }
+
+  .main-nav__logo img {
+    width: 113px;
+    height: 46px;
+  }
+
+  .main-nav__site {
+    display: flex;
+    order: 3;
+  }
+
 
   .main-nav__toggle {
     display: none;
@@ -13,7 +134,25 @@
 }
 
 @media (min-width: @desktop-width) {
-  .main-nav {
-    order: 0;
+  .main-nav__wrapper {
+    min-width: 1050px;
+  }
+
+  .main-nav__site {
+    order: 1;
+  }
+
+  .main-nav__logo {
+    padding-top: 8px;
+  }
+
+  .main-nav__logo img {
+    width: 149px;
+    height: 72px;
+  }
+
+  .main-nav__logo-container {
+    order: 2;
+    margin-left: -50px;
   }
 }
