--- a/source/less/blocks/page-title.less
+++ b/source/less/blocks/page-title.less
@@ -3,14 +3,32 @@
 }
 
 .page-title__text {
+  margin: 0;
+  padding-top: 73px;
+  padding-bottom: 73px;
   font-weight: 700;
   font-size: 27px;
   line-height: 30px;
+  text-align: center;
 }
 
 @media (min-width: @tablet-width) {
+  .page-title {
+    position: relative;
+  }
+
+  .page-title::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 24px;
+    bottom: 0;
+    left: 0;
+    background-image: url(../../img/zigzag-line-white-tablet.svg);
+  }
+
   .page-title__text {
-    text-align: center;
+    padding-bottom: 85px;
     font-size: 43px;
     line-height: 50px;
   }
