--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   list-style-type: none;
+  margin: 0;
   padding: 0;
 }
 
@@ -12,8 +13,12 @@
 }
 
 .site-list__item a {
+  display: block;
+  padding: 28px 76px;
+  padding-bottom: 28px;
   text-decoration: none;
   color: @black;
+  border-top: 1px solid @gray;
 }
 
 @media (max-width: @mobile-width-only) {
@@ -30,6 +35,11 @@
   .site-list__item a {
     display: block;
     min-width: 167px;
+    padding-top: 20px;
+    padding-right: 30px;
+    padding-left: 0;
+    padding-bottom: 20px;
+    border: none;
   }
 }
 
@@ -42,7 +52,14 @@
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
-    padding-right: 41px;
+    padding-right: 16px;
+  }
 
+  .site-list__item:not(:first-child) {
+    padding-left: 35px;
+  }
+
+  .site-list__item:first-child {
+    border-right: 1px solid @gray;
   }
 }
