--- a/source/less/blocks/user-list.less
+++ b/source/less/blocks/user-list.less
@@ -14,16 +14,35 @@
 
 .user-list__item a {
   display: block;
+  padding-top: 28px;
+  padding-left: 30px;
+  padding-bottom: 28px;
   text-decoration: none;
   color: @black;
+  border-top: 1px solid @gray;
+
+  &-hover {
+    opacity: 0.6;
+  }
+}
+
+.user-list__item a:last-child {
+  border-bottom: 1px solid @gray;
 }
 
 @media (max-width: @mobile-width-only) {
-
+  .user-list__icon {
+    padding-right: 26px;
+  }
 
 }
 
 @media (min-width: @tablet-width) {
+  .user-list {
+    display: flex;
+    order: 2;
+  }
+
   .user-list__container {
     flex-direction: row;
     flex-wrap: wrap;
@@ -37,19 +56,37 @@
 
   .user-list__item {
     display: block;
-    padding-top: 32px;
+    border-left: 1px solid @gray;
+  }
+
+  .user-list__item a {
     padding-bottom: 32px;
-    padding-left: 32px;
-    border-left: 1px solid rgba(0,0,0,0.2);
+    padding-top: 32px;
+    border: none;
+  }
+
+  .user-list__item a:last-child {
+    border: none;
   }
 
   .user-list__text {
+    &--hidden {
     display: none;
+    }
   }
 }
 
 @media (min-width: @desktop-width) {
   .user-list {
-    order: 3;
+    display: flex;
+
+  }
+
+  .user-list__item a {
+    padding-top: 32px;
+  }
+
+  .user-list__icon {
+    margin-right: 30px;
   }
 }
