--- a/source/less/blocks/user-sale.less
+++ b/source/less/blocks/user-sale.less
@@ -2,19 +2,43 @@
   .user-sale {
     display: none;
   }
+
 }
 
 @media (min-width: @tablet-width) {
   .user-sale {
+    display: flex;
+    order: 4;
+  }
+
+  .user-sale__list {
     display: none;
+  }
+
+  .user-sale__text {
+    padding-top: 20px;
+    padding-right: 0;
+    padding-left: 20px;
+    padding-bottom: 20px;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .user-sale {
-    display: block;
-    order: 4;
+  .user-sale__wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
+
+  .user-sale {
+    display: flex;
+    justify-content: space-between;
+    order: 4;
+    min-width: 1050px;
+    padding-top: 12px;
+    z-index: 2;
+  }
+
 
   .user-sale__list {
     display: flex;
@@ -24,7 +48,7 @@
   }
 
   .user-sale__item a {
-    padding-right: 45px;
+    padding-right: 62px;
     font-weight: 700;
     font-size: 15px;
     line-height: 24px;
