--- a/source/less/blocks/main.less
+++ b/source/less/blocks/main.less
@@ -7,7 +7,7 @@
   justify-content: center;
   height: 283px;
   background-color: #f9f9f9;
-  background-image: url(../../img/background-mobile.jpg);
+  background-image: url(../img/background-mobile.jpg);
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -74,13 +74,13 @@
   .main__image-wrapper {
     height: 570px;
     margin-top: -75px;
-    background-image: url(../../img/index-background-tablet.jpg);
+    background-image: url(../img/index-background-tablet.jpg);
     background-position: 50% -60px;
     background-repeat: no-repeat;
     border-top: 1px solid @gray;
 
     @media (min-resolution: 2dppx) {
-      background-image: url(../../img/index-background-tablet@2x.jpg);
+      background-image: url(../img/index-background-tablet@2x.jpg);
       background-size: 746px auto;
     }
   }
@@ -118,7 +118,7 @@
   .main::after {
     position: absolute;
     content: "";
-    background-image: url(../../img/zigzag-line-desktop.svg);
+    background-image: url(../img/zigzag-line-desktop.svg);
     width: 100%;
     height: 34px;
     bottom: 115px;
@@ -128,13 +128,13 @@
   .main__image-wrapper {
     margin: 0 auto;
     height: 610px;
-    background-image: url(../../img/index-background-desktop.jpg);
+    background-image: url(../img/index-background-desktop.jpg);
     background-size: cover;
     margin-top: -90px;
     background-position: 50% -16px;
 
     @media (min-resolution: 2dppx) {
-      background-image: url(../../img/index-background-desktop@2x.jpg);
+      background-image: url(../img/index-background-desktop@2x.jpg);
       background-size: 1150px auto;
     }
   }
