:heavy_check_mark: Сборка #5

--- a/5/css/style.css
+++ b/5/css/style.css
@@ -692,7 +692,7 @@ img {
   justify-content: center;
   height: 283px;
   background-color: #f9f9f9;
-  background-image: url(../../img/background-mobile.jpg);
+  background-image: url(../img/background-mobile.jpg);
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -749,7 +749,7 @@ img {
   .main__image-wrapper {
     height: 570px;
     margin-top: -75px;
-    background-image: url(../../img/index-background-tablet.jpg);
+    background-image: url(../img/index-background-tablet.jpg);
     background-position: 50% -60px;
     background-repeat: no-repeat;
     border-top: 1px solid #ececec;
@@ -777,7 +777,7 @@ img {
 }
 @media (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 768px) and (min-resolution: 2dppx) {
   .main__image-wrapper {
-    background-image: url(../../img/index-background-tablet@2x.jpg);
+    background-image: url(../img/index-background-tablet@2x.jpg);
     background-size: 746px auto;
   }
 }
@@ -789,7 +789,7 @@ img {
   .main::after {
     position: absolute;
     content: "";
-    background-image: url(../../img/zigzag-line-desktop.svg);
+    background-image: url(../img/zigzag-line-desktop.svg);
     width: 100%;
     height: 34px;
     bottom: 115px;
@@ -798,7 +798,7 @@ img {
   .main__image-wrapper {
     margin: 0 auto;
     height: 610px;
-    background-image: url(../../img/index-background-desktop.jpg);
+    background-image: url(../img/index-background-desktop.jpg);
     background-size: cover;
     margin-top: -90px;
     background-position: 50% -16px;
@@ -822,7 +822,7 @@ img {
 }
 @media (min-width: 1150px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 1150px) and (min-resolution: 2dppx) {
   .main__image-wrapper {
-    background-image: url(../../img/index-background-desktop@2x.jpg);
+    background-image: url(../img/index-background-desktop@2x.jpg);
     background-size: 1150px auto;
   }
 }
